--- a/internal/assets/manifests/istio-cni/templates/configmap-cni.yaml
+++ b/internal/assets/manifests/istio-cni/templates/configmap-cni.yaml
@@ -1,14 +1,12 @@
 kind: ConfigMap
 apiVersion: v1
 metadata:
-  name: istio-cni-config
+  name: {{ include "name-with-revision" ( dict "name" "istio-cni" "context" $) }}
   namespace: {{ .Release.Namespace }}
   labels:
     app: istio-cni
     release: {{ .Release.Name }}
-    istio.io/rev: {{ .Values.revision | default "default" }}
-    install.operator.istio.io/owning-resource: {{ .Values.ownerName | default "unknown" }}
-    operator.istio.io/component: "Cni"
+    istio.io/rev: {{ include "namespaced-revision" . }}
 data:
   # The CNI network configuration to add to the plugin chain on each node.  The special
   # values in this config will be automatically populated.
@@ -18,29 +16,29 @@ data:
           "name": "istio-cni",
           "type": "istio-cni",
           "log_level": {{ quote .Values.cni.logLevel }},
-          "log_uds_address": "__LOG_UDS_ADDRESS__", 
+          "log_uds_address": "__LOG_UDS_ADDRESS__",
           "kubernetes": {
               "kubeconfig": "__KUBECONFIG_FILEPATH__",
               "cni_bin_dir": {{ quote .Values.cni.cniBinDir }},
-              "exclude_namespaces": [ {{ range $idx, $ns := .Values.cni.excludeNamespaces }}{{ if $idx }}, {{ end }}{{ quote $ns }}{{ end }} ]
+              "exclude_namespaces": [ {{ range $idx, $ns := .Values.cni.excludeNamespaces }}{{ if $idx }}, {{ end }}{{ quote $ns }}{{ end }} ],
+              "include_namespaces": [ {{ range $idx, $ns := .Values.cni.includeNamespaces }}{{ if $idx }}, {{ end }}{{ quote $ns }}{{ end }} ],
+              "revision": "{{ include "namespaced-revision" . }}"
           }
         }
 ---
-  {{- if .Values.cni.taint.enabled }}
+{{- if .Values.cni.taint.enabled }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: "istio-cni-taint-configmap"
+  name: {{ include "name-with-revision" ( dict "name" "istio-cni-taint" "context" $) }}
   namespace: {{ .Release.Namespace }}
   labels:
     app: istio-cni
     release: {{ .Release.Name }}
-    istio.io/rev: {{ .Values.revision | default "default" }}
-    install.operator.istio.io/owning-resource: {{ .Values.ownerName | default "unknown" }}
-    operator.istio.io/component: "Cni"
+    istio.io/rev: {{ include "namespaced-revision" . }}
 data:
   config: |
-        - name: istio-cni
-          selector: k8s-app=istio-cni-node
+        - name: {{ include "name-with-revision" ( dict "name" "istio-cni" "context" $) }}
+          selector: app=istio-cni-node,istio.io/rev={{ include "namespaced-revision" . }}
           namespace: {{ .Release.Namespace }}
   {{- end }}
