--- a/internal/assets/manifests/istio-cni/templates/daemonset.yaml
+++ b/internal/assets/manifests/istio-cni/templates/daemonset.yaml
@@ -4,27 +4,27 @@
 kind: DaemonSet
 apiVersion: apps/v1
 metadata:
-  name: istio-cni-node
+  name: {{ include "name-with-revision" ( dict "name" "istio-cni-node" "context" $) }}
   namespace: {{ .Release.Namespace }}
   labels:
-    k8s-app: istio-cni-node
+    app: istio-cni-node
     release: {{ .Release.Name }}
-    istio.io/rev: {{ .Values.revision | default "default" }}
-    install.operator.istio.io/owning-resource: {{ .Values.ownerName | default "unknown" }}
-    operator.istio.io/component: "Cni"
+    istio.io/rev: {{ include "namespaced-revision" . }}
+{{- include "toYamlIf" (dict "value" .Values.cni.metadata.labels) | indent 4 }}
+{{- include "toYamlIf" (dict "value" .Values.cni.metadata.annotations "key" "annotations" "indent" 2) | indent 2 }}
 spec:
   selector:
     matchLabels:
-      k8s-app: istio-cni-node
-  updateStrategy:
-    type: RollingUpdate
-    rollingUpdate:
-      maxUnavailable: 1
+      app: istio-cni-node
+      release: {{ .Release.Name }}
+{{- include "toYamlIf" (dict "value" .Values.cni.deploymentStrategy "key" "updateStrategy" "indent" 2) | indent 2 }}
   template:
     metadata:
       labels:
-        k8s-app: istio-cni-node
+        app: istio-cni-node
+        release: {{ .Release.Name }}
         sidecar.istio.io/inject: "false"
+{{- include "toYamlIf" (dict "value" .Values.cni.podMetadata.labels) | indent 8 }}
       annotations:
         # This, along with the CriticalAddonsOnly toleration below,
         # marks the pod as a critical add-on, ensuring it gets
@@ -36,24 +36,12 @@ spec:
         prometheus.io/scrape: 'true'
         prometheus.io/port: "15014"
         prometheus.io/path: '/metrics'
-        # Custom annotations
-        {{- if .Values.cni.podAnnotations }}
-{{ toYaml .Values.cni.podAnnotations | indent 8 }}
-        {{- end }}
+{{- include "toYamlIf" (dict "value" .Values.cni.podMetadata.annotations) | indent 8 }}
     spec:
-      nodeSelector:
-        kubernetes.io/os: linux
-      tolerations:
-        # Make sure istio-cni-node gets scheduled on all nodes.
-        - effect: NoSchedule
-          operator: Exists
-        # Mark the pod as a critical add-on for rescheduling.
-        - key: CriticalAddonsOnly
-          operator: Exists
-        - effect: NoExecute
-          operator: Exists
-      priorityClassName: system-node-critical
-      serviceAccountName: istio-cni
+{{- if .Values.cni.priorityClassName }}
+      priorityClassName: {{ .Values.cni.priorityClassName }}
+{{- end }}
+      serviceAccountName: {{ include "name-with-revision" ( dict "name" "istio-cni" "context" $) }}
       # Minimize downtime during a rolling upgrade or deletion; tell Kubernetes to do a "force
       # deletion": https://kubernetes.io/docs/concepts/workloads/pods/pod/#termination-of-pods.
       terminationGracePeriodSeconds: 5
@@ -61,13 +49,9 @@ spec:
         # This container installs the Istio CNI binaries
         # and CNI network config file on each node.
         - name: install-cni
-{{- if contains "/" .Values.cni.image }}
-          image: "{{ .Values.cni.image }}"
-{{- else }}
-          image: "{{ .Values.cni.hub | default .Values.global.hub }}/{{ .Values.cni.image | default "install-cni" }}:{{ .Values.cni.tag | default .Values.global.tag }}"
-{{- end }}
-{{- if or .Values.cni.pullPolicy .Values.global.imagePullPolicy }}
-          imagePullPolicy: {{ .Values.cni.pullPolicy | default .Values.global.imagePullPolicy }}
+{{- include "dockerImage" (dict "image" .Values.cni.image "hub" .Values.global.hub "tag" .Values.global.tag) | indent 10 -}}
+{{- if .Values.global.imagePullPolicy }}
+          imagePullPolicy: {{ .Values.global.imagePullPolicy }}
 {{- end }}
           livenessProbe:
             httpGet:
@@ -89,7 +73,7 @@ spec:
             - name: CNI_NETWORK_CONFIG
               valueFrom:
                 configMapKeyRef:
-                  name: istio-cni-config
+                  name: {{ include "name-with-revision" ( dict "name" "istio-cni" "context" $) }}
                   key: cni_network_config
             - name: CNI_NET_DIR
               value: {{ default "/etc/cni/net.d" .Values.cni.cniConfDir }}
@@ -103,10 +87,10 @@ spec:
                 fieldRef:
                   fieldPath: spec.nodeName
             - name: REPAIR_LABEL_PODS
-              value: "{{.Values.cni.repair.labelPods}}"
+              value: "{{ .Values.cni.repair.labelPods }}"
             # Set to true to enable pod deletion
             - name: REPAIR_DELETE_PODS
-              value: "{{.Values.cni.repair.deletePods}}"
+              value: "{{ .Values.cni.repair.deletePods }}"
             - name: REPAIR_RUN_AS_DAEMON
               value: "true"
             - name: REPAIR_SIDECAR_ANNOTATION
@@ -114,9 +98,10 @@ spec:
             - name: REPAIR_INIT_CONTAINER_NAME
               value: "{{ .Values.cni.repair.initContainerName }}"
             - name: REPAIR_BROKEN_POD_LABEL_KEY
-              value: "{{.Values.cni.repair.brokenPodLabelKey}}"
+              value: "{{ .Values.cni.repair.brokenPodLabelKey }}"
             - name: REPAIR_BROKEN_POD_LABEL_VALUE
-              value: "{{.Values.cni.repair.brokenPodLabelValue}}"
+              value: "{{ .Values.cni.repair.brokenPodLabelValue }}"
+{{ include "toYamlIf" (dict "value" .Values.cni.env) | indent 12 }}
           volumeMounts:
             - mountPath: /host/opt/cni/bin
               name: cni-bin-dir
@@ -124,15 +109,13 @@ spec:
               name: cni-net-dir
             - mountPath: /var/run/istio-cni
               name: cni-log-dir
+{{ include "toYamlIf" (dict "value" .Values.cni.volumeMounts) | indent 12 }}
+{{ include "toYamlIf" (dict "value" .Values.cni.resources "key" "resources" "indent" 2) | indent 10 }}
 {{- if .Values.cni.taint.enabled }}
         - name: taint-controller
-{{- if contains "/" .Values.cni.image }}
-          image: "{{ .Values.cni.image }}"
-{{- else }}
-          image: "{{ .Values.cni.hub | default .Values.global.hub }}/{{ .Values.cni.image | default "install-cni" }}:{{ .Values.cni.tag | default .Values.global.tag }}"
-{{- end }}
-{{- if or .Values.cni.pullPolicy .Values.global.imagePullPolicy }}
-          imagePullPolicy: {{ .Values.cni.pullPolicy | default .Values.global.imagePullPolicy }}
+{{- include "dockerImage" (dict "image" .Values.cni.taint.image "hub" .Values.global.hub "tag" .Values.global.tag) | indent 10 -}}
+{{- if .Values.global.imagePullPolicy }}
+          imagePullPolicy: {{ .Values.global.imagePullPolicy }}
 {{- end }}
           command: ["/opt/local/bin/istio-cni-taint"]
           env:
@@ -142,6 +125,10 @@ spec:
             value: "istio-cni-taint-configmap"
           - name: "TAINT_CONFIGMAP-NAMESPACE"
             value: {{ .Release.Namespace | quote }}
+{{ include "toYamlIf" (dict "value" .Values.cni.taint.env) | indent 10 }}
+{{ include "toYamlIf" (dict "value" .Values.cni.taint.volumeMounts "key" "volumeMounts" "indent" 2) | indent 10 }}
+{{ include "toYamlIf" (dict "value" .Values.cni.taint.resources "key" "resources" "indent" 2) | indent 10 }}
+{{ include "toYamlIf" (dict "value" .Values.cni.taint.securityContext "key" "securityContext" "indent" 2) | indent 10 }}
 {{- end }}
       volumes:
         # Used to install CNI.
@@ -155,3 +142,16 @@ spec:
         - name: cni-log-dir
           hostPath:
             path: /var/run/istio-cni
+{{ include "toYamlIf" (dict "value" .Values.cni.volumes) | indent 8 }}
+{{ include "toYamlIf" (dict "value" .Values.cni.affinity "key" "affinity" "indent" 2) | indent 6 }}
+{{ include "toYamlIf" (dict "value" .Values.cni.nodeSelector "key" "nodeSelector" "indent" 2) | indent 6 }}
+      tolerations:
+      # Make sure istio-cni-node gets scheduled on all nodes.
+      - effect: NoSchedule
+        operator: Exists
+      # Mark the pod as a critical add-on for rescheduling.
+      - key: CriticalAddonsOnly
+        operator: Exists
+      - effect: NoExecute
+        operator: Exists
+{{ include "toYamlIf" (dict "value" .Values.cni.tolerations) | indent 6 }}
