--- a/internal/assets/manifests/istio-cni/templates/serviceaccount.yaml
+++ b/internal/assets/manifests/istio-cni/templates/serviceaccount.yaml
@@ -1,17 +1,10 @@
 apiVersion: v1
 kind: ServiceAccount
-{{- if .Values.global.imagePullSecrets }}
-imagePullSecrets:
-{{- range .Values.global.imagePullSecrets }}
-  - name: {{ . }}
-{{- end }}
-{{- end }}
+{{ include "toYamlIf" (dict "value" .Values.global.imagePullSecrets "key" "imagePullSecrets") }}
 metadata:
-  name: istio-cni
+  name: {{ include "name-with-revision" ( dict "name" "istio-cni" "context" $) }}
   namespace: {{ .Release.Namespace }}
   labels:
     app: istio-cni
     release: {{ .Release.Name }}
-    istio.io/rev: {{ .Values.revision | default "default" }}
-    install.operator.istio.io/owning-resource: {{ .Values.ownerName | default "unknown" }}
-    operator.istio.io/component: "Cni"
+    istio.io/rev: {{ include "namespaced-revision" . }}
