add cni support to discovery chart with tests

--- a/internal/assets/manifests/istio-control/istio-discovery/values.yaml
+++ b/internal/assets/manifests/istio-control/istio-discovery/values.yaml
@@ -534,3 +534,7 @@ global:
 base:
   # For istioctl usage to disable istio config crds in base
   enableIstioConfigCRDs: true
+
+istio_cni:
+  enabled: false
+  chained: true
