--- a/internal/components/discovery/testdata/icp-expected-resource-dump.yaml
+++ b/internal/components/discovery/testdata/icp-expected-resource-dump.yaml
@@ -1164,6 +1164,10 @@ data:
         },
         "useMCP": false
       },
+      "istio_cni": {
+        "chained": true,
+        "enabled": true
+      },
       "revision": "cp-v111x",
       "sidecarInjectorWebhook": {
         "alwaysInjectSelector": [],
