--- a/deploy/charts/istio-operator/templates/operator-rbac.yaml
+++ b/deploy/charts/istio-operator/templates/operator-rbac.yaml
@@ -270,6 +270,7 @@ rules:
   - servicemesh.cisco.com
   resources:
   - istiocontrolplanes
+  - istiomeshes
   verbs:
   - create
   - delete
@@ -282,6 +283,7 @@ rules:
   - servicemesh.cisco.com
   resources:
   - istiocontrolplanes/status
+  - istiomeshes/status
   verbs:
   - get
   - patch
