--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -42,9 +42,17 @@ rules:
   - ""
   resources:
   - nodes
-  - pods
   - replicationcontrollers
   verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
+  - ""
+  resources:
+  - pods
+  verbs:
+  - deletecollection
   - get
   - list
   - watch
