--- a/deploy/charts/istio-operator/templates/operator-rbac.yaml
+++ b/deploy/charts/istio-operator/templates/operator-rbac.yaml
@@ -52,9 +52,17 @@ rules:
   - ""
   resources:
   - nodes
-  - pods
   - replicationcontrollers
   verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
+  - ""
+  resources:
+  - pods
+  verbs:
+  - deletecollection
   - get
   - list
   - watch
