--- a/internal/components/discovery/testdata/icp-expected-values.yaml
+++ b/internal/components/discovery/testdata/icp-expected-values.yaml
@@ -54,6 +54,8 @@ global:
   caAddress: localhost
   distribution: official
   meshID: mesh1
+  multiCluster:
+    clusterName: demo-cluster1
 pilot:
   image: "container-hub/image-name:tag"
   deploymentAnnotations:
