--- a/internal/components/discovery/testdata/icp-test-cr.yaml
+++ b/internal/components/discovery/testdata/icp-test-cr.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: istio-system
 spec:
   meshID: mesh1
+  clusterID: demo-cluster1
   version: "1.11.0"
   logging:
     level: "default:warning"
