add icp containerImageConfiguration support to mgw

--- a/internal/assets/manifests/meshgateway/templates/deployment.yaml
+++ b/internal/assets/manifests/meshgateway/templates/deployment.yaml
@@ -40,8 +40,8 @@ spec:
       containers:
         - name: istio-proxy
           image: auto
-{{- if $gateway.imagePullPolicy }}
-          imagePullPolicy: {{ $gateway.imagePullPolicy }}
+{{- if .Values.global.imagePullPolicy }}
+          imagePullPolicy: {{ .Values.global.imagePullPolicy }}
 {{- end }}
           ports:
             {{- range $key, $val := $service.ports }}
