--- a/internal/assets/manifests/meshgateway/templates/serviceaccount.yaml
+++ b/internal/assets/manifests/meshgateway/templates/serviceaccount.yaml
@@ -1,10 +1,7 @@
 {{- $gateway := .Values.deployment }}
 apiVersion: v1
 kind: ServiceAccount
-{{- if $gateway.imagePullSecrets }}
-imagePullSecrets:
-{{ toYaml $gateway.imagePullSecrets -}}
-{{- end }}
+{{ include "toYamlIf" (dict "value" .Values.global.imagePullSecrets "key" "imagePullSecrets") }}
 metadata:
   name: {{ $gateway.name }}-service-account
   namespace: {{ .Release.Namespace }}
