--- a/internal/components/meshgateway/testdata/mgw-expected-resource-dump.yaml
+++ b/internal/components/meshgateway/testdata/mgw-expected-resource-dump.yaml
@@ -35,6 +35,7 @@ apiVersion: v1
 imagePullSecrets:
 - name: pullsecret-1
 - name: pullsecret-2
+- name: pullsecret-3
 kind: ServiceAccount
 metadata:
   labels:
