--- a/config/crd/patches/cainjection_in_istiomeshgateways.yaml
+++ b/config/crd/patches/cainjection_in_istiomeshgateways.yaml
@@ -5,4 +5,4 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     cert-manager.io/inject-ca-from: $(CERTIFICATE_NAMESPACE)/$(CERTIFICATE_NAME)
-  name: meshgateways.servicemesh.cisco.com
+  name: istiomeshgateways.servicemesh.cisco.com
