--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -289,7 +289,7 @@ rules:
 - apiGroups:
   - servicemesh.cisco.com
   resources:
-  - meshgateways
+  - istiomeshgateways
   verbs:
   - create
   - delete
@@ -301,7 +301,7 @@ rules:
 - apiGroups:
   - servicemesh.cisco.com
   resources:
-  - meshgateways/status
+  - istiomeshgateways/status
   verbs:
   - get
   - patch
