--- a/config/crd/patches/webhook_in_istiomeshgateways.yaml
+++ b/config/crd/patches/webhook_in_istiomeshgateways.yaml
@@ -3,7 +3,7 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: meshgateways.servicemesh.cisco.com
+  name: istiomeshgateways.servicemesh.cisco.com
 spec:
   conversion:
     strategy: Webhook
