--- a/config/samples/servicemesh_v1alpha1_istiomeshgateway.yaml
+++ b/config/samples/servicemesh_v1alpha1_istiomeshgateway.yaml
@@ -1,7 +1,7 @@
 apiVersion: servicemesh.cisco.com/v1alpha1
-kind: MeshGateway
+kind: IstioMeshGateway
 metadata:
-  name: mgw-sample
+  name: imgw-sample
 spec:
   deployment:
     affinity:
