--- a/internal/components/meshexpansion/testdata/icp-test-cr.yaml
+++ b/internal/components/meshexpansion/testdata/icp-test-cr.yaml
@@ -16,9 +16,9 @@ spec:
     gateway:
       metadata:
         labels:
-          mgw-label: labelvalue
+          imgw-label: labelvalue
         annotations:
-          mgw-annotation: annotationvalue
+          imgw-annotation: annotationvalue
       runAsRoot: true
       service:
         ports:
