--- a/config/samples/servicemesh_v1alpha1_istiomeshgateway.yaml
+++ b/config/samples/servicemesh_v1alpha1_istiomeshgateway.yaml
@@ -4,41 +4,13 @@ metadata:
   name: imgw-sample
 spec:
   deployment:
-    affinity:
-      nodeAffinity:
-        requiredDuringSchedulingIgnoredDuringExecution:
-          nodeSelectorTerms:
-          - matchExpressions:
-            - key: kubernetes.io/e2e-az-name
-              operator: In
-              values:
-              - e2e-az1
-              - e2e-az2
-      podAffinity:
-        requiredDuringSchedulingIgnoredDuringExecution:
-        - labelSelector:
-            matchExpressions:
-            - key: security
-              operator: In
-              values:
-              - S1
-          topologyKey: topology.kubernetes.io/zone
-    env:
-    - name: ISTIO_META_LOCAL_ENDPOINTS_ONLY
-      value: "true"
-    imagePullPolicy: Always
     metadata:
-      annotations:
-        smt: smt
       labels:
         app: istio-meshexpansion-gateway
         gateway-name: istio-meshexpansion-gateway-cp-v19x
         gateway-type: ingress
         istio: meshexpansiongateway
         istio.io/rev: cp-v19x.istio-system
-    nodeSelector:
-      disktype: ssd
-    priorityClassName: "asdad"
     replicas:
       count: 1
       min: 1
@@ -54,52 +26,11 @@ spec:
       runAsGroup: 0
       runAsNonRoot: false
       runAsUser: 0
-    tolerations:
-    - key: "key1"
-      operator: "Equal"
-      value: "value1"
-      effect: "NoSchedule"
-    volumeMounts:
-    - name: config-vol
-      mountPath: /etc/config
-    volumes:
-    - name: "dddemo"
-      volumeSource:
-        secret:
-          secretName: "ssname"
-          optional: true
-    - name: config-vol
-      volumeSource:
-        configMap:
-          localObjectReference:
-            name: log-config
-          items:
-            - key: log_level
-              path: log_level
   istioControlPlane:
-    name: cp-v110x
+    name: icp-v11x-sample
     namespace: istio-system
-  k8sResourceOverlays:
-  - groupVersionKind:
-      kind: DestinationRule
-    objectKey:
-      name: meshexpansion-dr-istiod-cp-v110x
-    patches:
-    - parseValue: true
-      path: /spec/trafficPolicy?/loadBalancer?
-      type: replace
-      value: |
-        consistentHash:
-          httpCookie:
-            name: user
-            ttl: 0s
   runAsRoot: true
   service:
-    metadata:
-      annotations:
-        smt: smt
-      labels:
-        smt: smt
     ports:
     - name: tcp-als-tls
       port: 50600
