--- a/config/samples/servicemesh_v1alpha1_istiocontrolplane.yaml
+++ b/config/samples/servicemesh_v1alpha1_istiocontrolplane.yaml
@@ -5,6 +5,7 @@ metadata:
 spec:
   version: 1.11.0
   mode: ACTIVE
+  networkName: network1
   logging:
     level: "default:info"
   mountMtlsCerts: false
