--- a/internal/components/discovery/testdata/icp-expected-values.yaml
+++ b/internal/components/discovery/testdata/icp-expected-values.yaml
@@ -47,6 +47,7 @@ global:
   istiod:
     enableAnalysis: false
   mountMtlsCerts: false
+  network: network1
   externalIstiod: false
   pilotCertProvider: istiod
   sds:
