--- a/internal/components/discovery/testdata/icp-test-cr.yaml
+++ b/internal/components/discovery/testdata/icp-test-cr.yaml
@@ -8,6 +8,7 @@ spec:
   clusterID: demo-cluster1
   version: "1.11.0"
   mode: ACTIVE
+  networkName: network1
   containerImageConfiguration:
     hub: gcr.io/istio-testing
     tag: latest
