--- a/internal/components/discovery/testdata/icp-expected-resource-dump.yaml
+++ b/internal/components/discovery/testdata/icp-expected-resource-dump.yaml
@@ -1071,6 +1071,7 @@ data:
         },
         "meshID": "mesh1",
         "meshNetworks": {},
+        "mode": "ACTIVE",
         "mountMtlsCerts": false,
         "multiCluster": {
           "clusterName": "demo-cluster1",
